# autoconf_demo

./: Makefile.am  README.md  autogen.sh  configure.ac
app/: Makefile.am
app/print_jiecheng/: Makefile.am  main.cpp
lib/: Makefile.am
lib/jiecheng/: Makefile.am  jiecheng.cpp  jiecheng.h
